tests/test-files/good/Soundness/SpecificAnnotationInt.elm

px : Int -> String
px x =
  "test"
