tests/test-files/bad/RecordTypeDuplicateFields.elm

f : { foo : String , foo : Int } -> Int
f r = r.foo
